# obs-scorecapture

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  buildspec.json
.github/scripts/: Build-Windows.ps1  build-macos
.github/workflows/: build-project.yaml
cmake/: FetchOpenCV.cmake
data/: presets.json  score_types.json
data/layouts/: default.html  template.html  websocket.js
data/locale/: en-US.ini
src/: Preset.cpp  Preset.hpp  SCFilter-info.cpp  SCFilter-properties.cpp  SCFilter.cpp  SCFilter.hpp  SCOutputManager.cpp  SCOutputManager.hpp  SCSource-info.cpp  SCSource-properties.cpp  SCSource.cpp  SCSource.hpp  ScoreData.hpp  obs-utils.cpp  obs-utils.h  plugin-main.c  plugin-main.cpp  plugin-support.c  scorecapture-data.h  scorecapture-filter-callbacks.cpp  scorecapture-filter-callbacks.h  scorecapture-filter-info.c  scorecapture-filter-presets.cpp  scorecapture-filter-presets.h  scorecapture-filter-properties.cpp  scorecapture-filter.cpp  scorecapture-filter.h
